# haavardm.github.io

./: CNAME  README.md  index.html  package-lock.json  package.json  vscode.code-workspace
.github/workflows/: node.js.yml
anyonethere/: Cargo.toml  Dockerfile
anyonethere/src/: main.rs
api/: Cargo.toml  Dockerfile
api/kubernetes/: deployment.yaml
api/src/: main.rs
css/: about.191deaa4.css  about.28ea9581.css  about.2d531695.css  about.33e93d48.css  about.37b11c7c.css  about.3b8c198c.css  about.5186108f.css  about.5e14c610.css  about.5efeaa77.css  about.620f98ac.css  about.6d316c6a.css  about.882b58c5.css  about.8dede986.css  about.940b1cd0.css  about.95de177e.css  about.9cca3b81.css  about.b257c230.css  about.b84aefd9.css  about.c6748cdc.css  about.cbc41614.css  about.cc9f83d9.css  about.d6cd66ff.css  about.df11a469.css  about.e50f121e.css  app.2558d802.css  app.3be1f08d.css  app.6b798f8d.css  app.6fb1d023.css  app.77c9100d.css  app.7c2fc678.css  app.8c916875.css  app.b224c0fa.css  app.b3ccf99c.css  app.ba61c1f7.css  app.e249fb58.css  app.e467986c.css  app.ec59caac.css  chunk-300a75e8.c88c8500.css  chunk-30177e3c.6ac3484e.css  chunk-32bd36cc.5b5d368f.css  (+6 more)
dtgaussprocess/: Cargo.toml
dtgaussprocess/src/: gp.rs  lib.rs
frontend/: .eslintignore  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: AnyoneThere.vue  GaussianProcess.vue  Graphics.vue
frontend/src/router/: index.ts
js/: about.06a6f0f8.js  about.06a6f0f8.js.map  about.197e92a8.js  about.197e92a8.js.map  about.1d28d55d.js  about.1d28d55d.js.map  about.1e28767e.js  about.1e28767e.js.map  about.213c01ee.js  about.213c01ee.js.map  about.262cb748.js  about.262cb748.js.map  about.2a1f6fd1.js  about.2a1f6fd1.js.map  about.2dc9c2af.js  about.2dc9c2af.js.map  about.33a95391.js  about.33a95391.js.map  about.3e7e0673.js  about.3e7e0673.js.map  about.413b3ea5.js  about.413b3ea5.js.map  about.4ee2b77f.js  about.4ee2b77f.js.map  about.51ec7af3.js  about.51ec7af3.js.map  about.52fc42d8.js  about.52fc42d8.js.map  about.5cad3afa.js  about.5cad3afa.js.map  about.5d4b38e7.js  about.5d4b38e7.js.map  about.64a9a315.js  about.64a9a315.js.map  about.6cc748e3.js  about.6cc748e3.js.map  about.7001debe.js  about.7001debe.js.map  about.701fe3e4.js  about.701fe3e4.js.map  (+271 more)
(+6 files in other folders)
