[package]
name = "api"
version = "0.1.0"
authors = ["Håvard Skåra Mellbye <havardmellbye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
google-cloud = { version = "0.1.0", features = ["pubsub"]}
chrono = "0.4"
serde = {version= "1", features=["derive"]}
serde_json = "1"