[package]
name = "dtgaussprocess"
version = "0.1.0"
authors = ["Håvard Skåra Mellbye <havardmellbye@gmail.com>"]
edition = "2018"
description = "Implementation of a Gaussian Process using nalgebra. Intended for use in browser with WASM."
repository = "github.com/HaavardM/playground"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.63", features=["serde-serialize"]}
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
js-sys = "^0.3"
nalgebra = "^0.21"
console_error_panic_hook = "^0.1"

[profile.release]
lto = true
