[package]
name = "dtgaussprocess"
version = "0.1.0"
authors = ["Håvard Skåra Mellbye <havardmellbye@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "^0.2", features=["serde-serialize"]}
serde_json = "^1.0"
serde_derive = "^1.0"
serde = "^1.0"
js-sys = "^0.3"
nalgebra = "^0.27"
console_error_panic_hook = "^0.1"
